tests/ui/fail/non_trait_or_impl.rs
use extern_trait::extern_trait;

#[extern_trait]
struct NotATraitOrImpl;

fn main() {}
